@@ -5,16 +5,16 @@ AUX QGLViewerWidget-hh-gcc-4.3-include-fix.patch 676 SHA256 89b45de09e182f603d20
 AUX openmesh-1.0.0-gcc41.patch 3925 SHA256 9514b94f4f55e9ec7c73675dcd57e0f13d7aa7d184429e36237a36a9be50ba41 SHA512 3fea8654be56a46c95009a4735d73f43a68b31c4a743abb50498acbdf14bf8b37c4685bd41edb0c3bef12cfeb3511f6a442830af63464d6418f188410c482ff8 WHIRLPOOL ec6ad5bbb4c62a13a15a249dc90b20af052372a5fcc9f182e8139db89ee7b4772601c8f239021dd7194899946a1d6cf9e01e961300c1f9d226c2be11a3b04715
 DIST OpenMesh-2.3.1.tar.bz2 18203577 SHA256 5cd6537c64e1ff3f451e19328a70c02d283d06705e96698c19dde75c3749e4f8 SHA512 5d0822032111f07dc23751edebc7efa6e98d7e729ee020cfa6b5cf78b4c5e1a9f0ea1ca4a5cf3b1fe1cb1fc4389260f834b9e1c682a4f4c68cdc84035eef6c67 WHIRLPOOL 398fd2ae94e3927024fdc8489801480b9c27449e1ac5559f0e8c890ebee3d61b66207c6909f4b3ef73ec16829fee877e57e434a77c9dde2c0d22ec80a987e968
 DIST OpenMesh-3.2.tar.bz2 23766435 SHA256 c74890539846c8222aae93ad63316132e84bf4b2080c9b8321790767723f32e5 SHA512 40b346a6c7b141c284183ca66a489d20b668e3c3c0fb5b4e4185b86ea4552f031ea3106e918b2c3cf8e1bc713f3aac325dd17b50ec4d29f6446cf2cbde9a3dd9 WHIRLPOOL 93d8a2d2443f3de8938bf02836f1e1af92fc5adcd0c8c8fbc404a489d566d8d0e4dc4ed86665a8de0c94b171c045713497a7ef6fdb2aa83e04c5a3e2c18a79d5
+DIST OpenMesh-3.3.tar.bz2 24797682 SHA256 4eff6fff5685c57e2e7cdbf5b4b1ef183b3806db822eb01f74c8895e0fbe7a1d SHA512 3bed1f6a3d7db9b67d6c17647bf6c5efa26aca394763d14f5106f70573660329618d99287a51bea23c3a34b495117e38d5756d6d5bf49ea1add711d9e68bab8d WHIRLPOOL 3e6469940dd0ea5c6b83f79841faae8917c25558ea2bc43d78b7576c070fb8ab14b0280c1900e7d871f30a305ab42791a5498373a8869674179b0fd73dc626d5
 EBUILD openmesh-2.3.1.ebuild 1488 SHA256 708561cdf4487e65180a10fd66486b24562e49cb958a1e82c7071ab586531e11 SHA512 53e244ef1b4f4171f361b1074b4f5441e3378d070e91af2e324c74c61a81cc3fd71ecefdbaed4561b264c74e3c7477c3619dadb17a427f11cc64abe4f2689d4f WHIRLPOOL 1d8a71030488ca0c6cababba3158abe8c7de28b8561180c4206fe3f99f59029938c4d41114fa6447b54d4f51bf400e6b7b76541b08c97c07f407aad54fdc5835
 EBUILD openmesh-3.2.ebuild 1689 SHA256 13be8f5d2ef311828925eca4f20ae15a29c74af64c497343e97787f48b5feb2f SHA512 4aa0e258b949a37f6ea5091e39771876c2451a02f6f2a9f1f23e9d017bf322c677174821e58230fc1fd35c73a48f313bbdc80167c1a19cfbfc47a8db8e303c07 WHIRLPOOL 61cb5bcd88116d16e04d7c8ba7fdb08d4f687fdad431094dad23213df3bb9986c9fd0aeb17b4572baff6ae179c9c97f93aa867f0f386607d34923bce0e7b656b
-MISC ChangeLog 5504 SHA256 d48b032c0a1039b43db7c7e5b617743eacfba95bb326a042d9b12b5b2a18ebb5 SHA512 d175f3b3e509b865ae1a2922223a7ce15a73d594235c8ca97a90074bbbdb5937950b2970f945b721ed66da3b504c5f7c990644637d1ff2aa8d4e175957eb654d WHIRLPOOL efac7feb0077040c471626ed58327ef80b186c60c7d0aef792b96fd4df9ea79a009ecd4e4255c49b2b4047a553698350be771e07280f838c887f72dd00aff0c5
+EBUILD openmesh-3.3.ebuild 1981 SHA256 c56f420fa9b76392e77e6d2545bcd8f720c4523027aef64e2bf1cc42f6c78d6c SHA512 0eb58ddcba9c046ea5f74afe0cdaf3b04c9e22a387752ea40766be4c621a3bca0fc880005ec3005ebe4cb09e2751221193a41b68dbebe5b9d702c0c677bc78d4 WHIRLPOOL 5f7655c6e76989721021ab8ad24b94016fafb43b0e612665cdd7c0e737f7ad9a92c238438a3b956ada30ed1629eea1d47f0086240146d16db6bc6b696dd7c87a
+MISC ChangeLog 5695 SHA256 77ce0ea4396c639eff5bba6d6fc11cb981dddf9c9a1462f2d970d71c339ebd4a SHA512 4513b3602922bb42b931a670474b7059569c90a1fb1d9e0faeb85a28daacdcf168eeae2570aebe111a62f8ee86b1b736e4d64a892437f3285f392cd5b66580ed WHIRLPOOL 2d46ec93a734bcb49f6c69f4d20081dc10d245c3ec4c2d88c88f806d9c0ef06670e07dc3b23de1ca4a999024a1221d61a34cd7b3885d39d3bb4bc60117ca2674
 MISC metadata.xml 699 SHA256 e0a2a5f273b3b1694e1546b74a8752c86b793734691e9ad948f10b40eb6aa4da SHA512 62e7ce72864ed47ab09bce795b0b10c6e256223f0953988388f0d7d6a7d8a930765e728e4ca2e257b048668289d3983c871f97f397e7b41855788b3ca558f435 WHIRLPOOL d051d5a17a1496f20f145f8b9c1a040e7f280072ec5ebb61d1b499fd8ca06ca6b4fc81a7f36d5f3e25f10235e718566df0dd84f22542e67db212f30569bbd11a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlWpLFQACgkQG9wOWsQutdaW+gP+MjlBb7yq0gk68NaYeN3rbjoJ
-NnyFDwAIQd8/m6Nwx3q0qAGX6Fqiz1s2EVUcfoEG03grk9m66v6COXSeFbhe1G7w
-DXLudf7J0f4fl9XY0C3dknedIfb+e9/8b3bpbdpeJ9Flh5kgvIUuS6asMjMpwJ/z
-hYRAXr7RNSWE599NeIA=
-=tCRs
+iEYEAREIAAYFAlXCLIoACgkQ4MrvBE1wQ8kc9gCgkYW1b3cQmeNx8z/tLNFFBrvk
+KMwAn25PYC08XqN280MJU4Is1lpUyIJH
+=Zd9q
 -----END PGP SIGNATURE-----
