@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/openmesh
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/openmesh/ChangeLog,v 1.37 2015/07/17 16:27:08 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/openmesh/ChangeLog,v 1.38 2015/08/05 15:32:21 jsbronder Exp $
+
+*openmesh-3.3 (05 Aug 2015)
+
+  05 Aug 2015; Justin Bronder <jsbronder@gentoo.org> +openmesh-3.3.ebuild:
+  Bump. Enable unit tests and disable python bindings until someone asks for
+  them
 
   17 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> openmesh-3.2.ebuild:
   ia64 stable wrt bug #526374
